# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-01-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Mark hello_world3 example for removal
      (details at https://github.com/CloudI/CloudI/issues/201)

2017-01-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.6.0 released

2017-01-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug with external services not using the
      response_timeout_immediate_max service configuration option value
      when receiving invalid request and/or request_info
      within a service request
    * Change the meaning of the service configuration options
      request_timeout_immediate_max and response_timeout_immediate_max so that
      the timeout value must be greater than or equal instead of greater than
      with the defaults changed from 20000 milliseconds to 20001 milliseconds
      to provide the same default behavior that was present previously
      (better characteristics when being set to 0, which will be limit_min)
    * Allow limit_min or limit_max to be used for the service configuration
      options request_timeout_immediate_max, response_timeout_immediate_max,
      restart_delay, monkey_latency

2017-01-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow limit_min or limit_max to be used for timeout_init,
      timeout_async, timeout_sync in the service configuration
      and timeout_terminate in the service configuration options
    * Changed the minimum default send_async and send_sync timeout value
      for service configuration from 101 milliseconds to 499 milliseconds
      (based on current macros) to be consistent with
      limit_min use in the cloudi_service module and the cloudi module
    * Erlang type cloudi_service_api:timeout_milliseconds() was removed and
      split into more specific types
    * Add manual-update makefile target for updating automatically